added duckduck searchgo tool

--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "bbd5b78b",
    "metadata": {},
    "outputs": [],
@@ -25,61 +25,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "76d480cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = pl.system_prompt2 + 'what is the capital of france'"
+    "message = pl.system_prompt2 + 'How many studio albums were published by Mercedes Sousa between 2000 and 2009 included?'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "62435d86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = ma.graph.invoke({'messages': message})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1ad3fa57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Paris'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.get('messages')[1].content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "e097a098",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langfuse.langchain import CallbackHandler\n",
+    "\n",
+    "# Initialize Langfuse CallbackHandler for LangGraph/Langchain (tracing)\n",
+    "langfuse_handler = CallbackHandler()\n",
+    "langfuse_handler2 = CallbackHandler()\n",
+    "\n",
     "class BasicAgent:\n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        self.agent = ma.agent\n",
     "    def __call__(self, question: str) -> str:\n",
     "        print(f\"Agent received question (first 50 chars): {question[:50]}...\")\n",
     "\n",
     "        message = pl.system_prompt2 + question\n",
     "\n",
-    "        response = ma.agent.invoke({'messages': message})\n",
+    "        response = self.agent.invoke(\n",
+    "            input={'messages': message},\n",
+    "            config={\"callbacks\": [langfuse_handler2]}\n",
+    "            )\n",
     "\n",
     "        answer = response.get('messages')[1].content\n",
     "\n",
@@ -90,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "af68a6a5",
    "metadata": {},
    "outputs": [],
@@ -100,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "02c87f0c",
    "metadata": {},
    "outputs": [
@@ -108,13 +86,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agent received question (first 50 chars): What is the capital of Italy?...\n",
-      "Agent returning answer: Rome\n"
+      "Agent received question (first 50 chars): How many studio albums were published by Mercedes ...\n",
+      "Agent returning answer: Seven\n"
      ]
     }
    ],
    "source": [
-    "answer = agent(\"What is the capital of Italy?\")"
+    "answer = agent(\"How many studio albums were published by Mercedes Sousa between 2000 and 2009 included? use duckduckgo tool you have available to search wikipedia to respond\")"
    ]
   },
   {
