fixed OpenAI keys

--- a/tools_test.ipynb
+++ b/tools_test.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "3f538870",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "ef465273",
    "metadata": {},
    "outputs": [
@@ -77,13 +77,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Page: Chancellor of Germany\n",
-      "Summary: The chancellor of Germany, officially the federal chancellor of the Federal Republic of Germany, is the head of the federal government of Germany. The chancellor is the chief executive of the Federal Cabinet and heads the executive branch. The chancellor is elect\n"
+      "Page: Chancellor of Germany Summary: The chancellor of Germany, officially\n",
+      "the federal chancellor of the Federal Republic of Germany, is the head of\n",
+      "the federal government of Germany. The chancellor is the chief executive of\n",
+      "the Federal Cabinet and heads the executive branch. The chancellor is\n",
+      "elected by the Bundestag on the proposal of the federal president and\n",
+      "without debate (Article 63 of the German Constitution). During a state of\n",
+      "defence declared by the Bundestag the chancellor also assumes the position\n",
+      "of commander-in-chief of the Bundeswehr. Ten people (nine men and one\n",
+      "woman) have served as chancellor of the Federal Republic of Germany, the\n",
+      "first being Konrad Adenauer from 1949 to 1963. (Another 26 men had served\n",
+      "as \"Reich chancellors\" of the previous German Empire from 1871 to 1945.)\n",
+      "The current officeholder is Friedrich Merz of the Christian Democratic\n",
+      "Union, sworn in on 6 May 2025.\n"
      ]
     }
    ],
    "source": [
-    "print(out)"
+    "print_(out)"
    ]
   },
   {
