--- a/test.ipynb
+++ b/test.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "02c87f0c",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "text": [
       "Agent received question (first 50 chars): \n",
       "How many studio albums were published by Mercedes...\n",
-      "Agent returning answer: Three\n"
+      "Agent returning answer: Cantora 1, Cantora 2.\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "069db350",
    "metadata": {},
    "outputs": [
@@ -178,6 +178,20 @@
       "land inequality. During the 1970s she was a part of two films by the\n",
       "director Leopoldo Torre Nilsson: El Santo de la Espada in 1970 and Güemes,\n",
       "la tierra en armas in 1971, in which she portrayed Juana Azurduy de\n",
+      "Padilla, the guerrilla military leader who fought for In the early 1970s,\n",
+      "Sosa released two concept albums in collaboration with composer Ariel\n",
+      "Ramírez and lyricist Félix Luna: Cantata Sudamericana and Mujeres\n",
+      "Argentinas (Argentine Women). She also recorded a tribute to Chilean\n",
+      "musician Violeta Parra in 1971, including what was to become one of Sosa's\n",
+      "signature songs, Gracias a la vida. She further popularized of songs\n",
+      "written by Milton Nascimento of Brazil and Pablo Milanés and Silvio\n",
+      "Rodríguez both from Cuba. Throughout the decade, she released albums such\n",
+      "as Hasta la Victoria in 1972 and Traigo un Pueblo en mi Voz in 1973. They\n",
+      "featured songs like \"Cuando tenga la tierra\", written by Ariel Petrocelli\n",
+      "and Daniel Toro, which tackles political and social issues like wealth and\n",
+      "land inequality. During the 1970s she was a part of two films by the\n",
+      "director Leopoldo Torre Nilsson: El Santo de la Espada in 1970 and Güemes,\n",
+      "la tierra en armas in 1971, in which she portrayed Juana Azurduy de\n",
       "Padilla, the guerrilla military leader who fought for The double album was\n",
       "a commercial success, being certified platinum by the CAPIF selling more\n",
       "than 200,000 copies in Argentina, Cantora 1 was also certified platinum\n",
@@ -187,60 +201,52 @@
       "only appearances on both charts. At documentary film titled Mercedes Sosa,\n",
       "Cantora un viaje íntimo was released on 2009, it was directed by Rodrigo\n",
       "Vila and features the recording process of the album as well as testimonies\n",
-      "from the different guest artists that appeared on the project. Haydée\n",
-      "Mercedes Sosa (9 July 1935 – 4 October 2009) was an Argentine singer who\n",
-      "was popular throughout Latin America and many countries outside the region.\n",
-      "With her roots in Argentine folk music, Sosa became one of the preeminent\n",
-      "exponents of El nuevo cancionero. She gave voice to songs written by many\n",
-      "Latin American songwriters. Her music made people hail her as the \"voice of\n",
-      "the voiceless ones\". She was often called \"the conscience of Latin\n",
-      "America\". Cantora, un Viaje Íntimo  (English: Cantora, An Intimate Journey)\n",
-      "is a double album by Argentine singer Mercedes Sosa, released on 2009\n",
-      "through Sony Music Argentina. The album features Cantora 1 and Cantora 2,\n",
-      "the project is Sosa's final album before her death on October 4, 2009. At\n",
-      "the 10th Annual Latin Grammy Awards, Cantora 1 was nominated for Album of\n",
-      "the Year and won Best Folk Album and Best Recording Package, the latter\n",
-      "award went to Alejandro Ros, the art director of the album. Additionally,\n",
-      "Sosa won two out of five nominations for the albums at the Gardel Awards\n",
-      "2010, the double album was nominated for Album of the Year and Production\n",
-      "of the Year and won Best DVD while both Cantora 1 and Cantora 2 were\n",
-      "nominated for Best Female Folk Album, with the former winning the category.\n",
-      "public. Sosa and her first husband, Manuel Oscar Matus, with whom she had\n",
-      "one son, were key players in the mid-60s nueva canción movement (which was\n",
-      "called nuevo cancionero in Argentina). Her second record was Canciones con\n",
-      "Fundamento, a collection of Argentine folk songs. == Background == The\n",
-      "albums were produced by Popi Spatocco, frequent collaborator of Sosa,\n",
-      "engineered by Jorge \"Portugués\" Da Silva and recorded from May 2008 to June\n",
-      "2009 at Estudios Panda and Estudios Ion, both in Buenos Aires, Argentina,\n",
-      "the first session took place at Estudios Panda while the rest of the album\n",
-      "was recorded at Estudios Ion, the first songs to be recorded were \"Agua,\n",
-      "Fuego, Tierra y Viento\" with Argentine singer Soledad Pastorutti and\n",
-      "\"Misionera\" with Brazilian accordionist Luiz Carlos Borges, the recording\n",
-      "of the album was marked by interruptions due to the delicate health\n",
-      "condition of Sosa, she would eventually die on October 16, 2009 at age 74,\n",
-      "a couple of months following the release of the albums, about Cantora,\n",
-      "Spatocco said that \"it was like receiving a diploma of honor, she was\n",
-      "dedicated to whatever happened because she knew that I had her back\". Sosa\n",
-      "\"spent the late 1960s building her audience in Europe and among the\n",
-      "cosmopolitan middle class in Buenos Aires, becoming in the process a much\n",
-      "bigger star\" than her contemporaries. In 1967, Sosa toured the United\n",
-      "States and Europe with great success. In later years, she performed and\n",
-      "recorded extensively, broadening her repertoire to include material from\n",
-      "throughout Latin America. Sosa was born on 9 July 1935, in San Miguel de\n",
-      "Tucumán, in the northwestern Argentine province of Tucumán, of mestizo\n",
-      "ancestry. She was of French, Spanish and Diaguita descent. Her nickname \"la\n",
-      "negra\", which is a common nickname in Argentina for people with darker\n",
-      "complexion, is a reference to her indigenous heritage. Her parents, a day\n",
-      "laborer and a washerwoman, were Peronists, although they never registered\n",
-      "in the party, and she started her career as a singer for the Peronist Party\n",
-      "in Tucuman under the name Gladys Osorio. In 1950, at age fifteen, she won a\n",
-      "singing competition organized by a local radio station and was given a\n",
-      "contract to perform for two months. She recorded her first album, La Voz de\n",
-      "la Zafra, in 1959. A performance at the 1965 Cosquín National Folklore\n",
-      "Festival—where she was introduced and brought to the stage while sitting in\n",
-      "the audience by fellow folk singer Jorge Cafrune— brought her to the\n",
-      "attention of the Argentine public. Sosa and her first husband, Manuel\n",
-      "<class 'langchain_core.messages.ai.AIMessage'>: Three\n"
+      "from the different guest artists that appeared on the project. The double\n",
+      "album was a commercial success, being certified platinum by the CAPIF\n",
+      "selling more than 200,000 copies in Argentina, Cantora 1 was also certified\n",
+      "platinum selling 40,000 copies while Cantora 2 was certified gold selling\n",
+      "20,000 copies. The album also peaked at numbers 22 and 8 at the Top Latin\n",
+      "Albums and Latin Pop Albums charts in United States, respectively, being\n",
+      "Sosa's only appearances on both charts. At documentary film titled Mercedes\n",
+      "Sosa, Cantora un viaje íntimo was released on 2009, it was directed by\n",
+      "Rodrigo Vila and features the recording process of the album as well as\n",
+      "testimonies from the different guest artists that appeared on the project.\n",
+      "Haydée Mercedes Sosa (9 July 1935 – 4 October 2009) was an Argentine singer\n",
+      "who was popular throughout Latin America and many countries outside the\n",
+      "region. With her roots in Argentine folk music, Sosa became one of the\n",
+      "preeminent exponents of El nuevo cancionero. She gave voice to songs\n",
+      "written by many Latin American songwriters. Her music made people hail her\n",
+      "as the \"voice of the voiceless ones\". She was often called \"the conscience\n",
+      "of Latin America\". Haydée Mercedes Sosa (9 July 1935 – 4 October 2009) was\n",
+      "an Argentine singer who was popular throughout Latin America and many\n",
+      "countries outside the region. With her roots in Argentine folk music, Sosa\n",
+      "became one of the preeminent exponents of El nuevo cancionero. She gave\n",
+      "voice to songs written by many Latin American songwriters. Her music made\n",
+      "people hail her as the \"voice of the voiceless ones\". She was often called\n",
+      "\"the conscience of Latin America\". Cantora, un Viaje Íntimo  (English:\n",
+      "Cantora, An Intimate Journey) is a double album by Argentine singer\n",
+      "Mercedes Sosa, released on 2009 through Sony Music Argentina. The album\n",
+      "features Cantora 1 and Cantora 2, the project is Sosa's final album before\n",
+      "her death on October 4, 2009. At the 10th Annual Latin Grammy Awards,\n",
+      "Cantora 1 was nominated for Album of the Year and won Best Folk Album and\n",
+      "Best Recording Package, the latter award went to Alejandro Ros, the art\n",
+      "director of the album. Additionally, Sosa won two out of five nominations\n",
+      "for the albums at the Gardel Awards 2010, the double album was nominated\n",
+      "for Album of the Year and Production of the Year and won Best DVD while\n",
+      "both Cantora 1 and Cantora 2 were nominated for Best Female Folk Album,\n",
+      "with the former winning the category. Cantora, un Viaje Íntimo  (English:\n",
+      "Cantora, An Intimate Journey) is a double album by Argentine singer\n",
+      "Mercedes Sosa, released on 2009 through Sony Music Argentina. The album\n",
+      "features Cantora 1 and Cantora 2, the project is Sosa's final album before\n",
+      "her death on October 4, 2009. At the 10th Annual Latin Grammy Awards,\n",
+      "Cantora 1 was nominated for Album of the Year and won Best Folk Album and\n",
+      "Best Recording Package, the latter award went to Alejandro Ros, the art\n",
+      "director of the album. Additionally, Sosa won two out of five nominations\n",
+      "for the albums at the Gardel Awards 2010, the double album was nominated\n",
+      "for Album of the Year and Production of the Year and won Best DVD while\n",
+      "both Cantora 1 and Cantora 2 were nominated for Best Female Folk Album,\n",
+      "with the former winning the category.\n",
+      "<class 'langchain_core.messages.ai.AIMessage'>: Cantora 1, Cantora 2.\n"
      ]
     }
    ],
